--- a/app/src/main/res/layout/row_student.xml
+++ b/app/src/main/res/layout/row_student.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rl_row_student"
+    android:id="@+id/rl_row_data"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/component_margin"
+    android:layout_marginBottom="@dimen/component_margin">
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         tools:text="Name" />
@@ -19,14 +21,9 @@
         android:id="@+id/tv_department"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tv_name"
-        android:layout_alignStart="@+id/tv_name"
         android:layout_below="@+id/tv_name"
+        android:layout_alignStart="@+id/tv_name"
+        android:layout_alignLeft="@+id/tv_name"
         tools:text="Department" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:layout_below="@+id/tv_department"
-        android:background="#dedede" />
 </RelativeLayout>
